prometheus-grafana/kubernetes/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml -o kubernetes/
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yaml -o kubernetes/
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/prometheus-grafana-default: "true"
        io.kompose.service: grafana
    spec:
      containers:
        - env:
            - name: GF_SECURITY_ADMIN_PASSWORD
              # value: grafana
              valueFrom:
                secretKeyRef:
                  name: grafana-secret
                  key: grafana-password
            - name: GF_SECURITY_ADMIN_USER
              # value: admin
              valueFrom:
                secretKeyRef:
                  name: grafana-secret
                  key: grafana-username
          image: grafana/grafana
          name: grafana
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /etc/grafana/provisioning/datasources
              name: grafana-datasources
      restartPolicy: Always
      volumes:
        - name: grafana-datasources
          configMap:
            name: grafana-datasources
status: {}
