prometheus-grafana/kubernetes/prometheus-grafana-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: prometheus-grafana-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/prometheus-grafana-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/prometheus-grafana-default: "true"
